[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icons/configuracao.png" type="Texture" id=1]
[ext_resource path="res://scenes/AuxScenes/ConfigurationPopup.gd" type="Script" id=2]
[ext_resource path="res://scenes/GUI/Configuration.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="ConfigurationPopup" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.023
anchor_top = 0.028
anchor_right = 0.078
anchor_bottom = 0.111
margin_left = -7.552
margin_top = -8.128
margin_right = 0.127998
margin_bottom = 8.064
custom_styles/focus = SubResource( 1 )
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="ConfigurationWindow" parent="." instance=ExtResource( 3 )]
layer = 2

[connection signal="pressed" from="Button" to="." method="popup_config_window"]
[connection signal="exit_button" from="ConfigurationWindow" to="." method="hide_window"]
